# c-util

./: .gitignore  .gitmodules  CMakeLists.txt  all_comments.json  comments.json  comments_parsed.txt  comments_raw.json  line135.json  paged_sparse_array_int.i  pr_comments.json  reorder_tests.ps1  threads.json  vcpkg.json
samples/async_op_samples/: CMakeLists.txt  README.md  hl_async_module.c  hl_async_module.h  hl_async_module_cancel_all.c  hl_async_module_cancel_all.h  ll_async_module_fake_cancel.c  ll_async_module_fake_cancel.h  ll_async_module_real_cancel.c  ll_async_module_real_cancel.h  main.c  ml_async_module.c  ml_async_module.h  ml_async_module_with_async_chain.c  ml_async_module_with_async_chain.h  ml_async_module_with_retries.c  ml_async_module_with_retries.h
test_helpers/: CMakeLists.txt
test_helpers/src/: c_util_test_env_params.c  guid_as_string.c  leak_log_checker.c  leak_log_folder.c  rc_string_test_type.c  test_env_params.c  uuid_test_type.c
tests/: CMakeLists.txt
tests/agenttime_ut/: CMakeLists.txt  agenttime_ut.c
tests/async_op_int/: CMakeLists.txt  async_op_int.c  test_async_op_obj.c  test_async_op_obj.h
tests/async_op_ut/: CMakeLists.txt  async_op_ut.c  async_op_ut_pch.h
tests/async_retry_wrapper_ut/: CMakeLists.txt  async_retry_wrapper_ut.c  async_retry_wrapper_ut_pch.h  real_test_ref_counted.c  real_test_ref_counted.h  real_test_ref_counted_renames.h  test_async.h  test_async_retry_wrappers.c  test_async_retry_wrappers.h  test_ref_counted.c  test_ref_counted.h
tests/async_type_helper_copy_value_handler_ut/: CMakeLists.txt  async_type_helper_copy_value_handler_ut.c  async_type_helper_copy_value_handler_ut_pch.h
tests/async_type_helper_ref_counted_handler_ut/: CMakeLists.txt  async_type_helper_ref_counted_handler_ut.c  async_type_helper_ref_counted_handler_ut_pch.h  test_ref_counted.c  test_ref_counted.h  test_ref_counted_async_type_helper_handler.c  test_ref_counted_async_type_helper_handler.h
tests/async_type_helper_thandle_handler_ut/: CMakeLists.txt  async_type_helper_thandle_handler_ut.c  async_type_helper_thandle_handler_ut_pch.h  test_thandle.h  test_thandle_async_type_helper_handler.c  test_thandle_async_type_helper_handler.h
tests/async_type_helper_ut/: CMakeLists.txt  async_type_helper_ut.c  async_type_helper_ut_pch.h
tests/azure_base64_ut/: CMakeLists.txt  azure_base64_ut.c  azure_base64_ut_pch.h
tests/batch_queue_int/: CMakeLists.txt  batch_queue_int.c
tests/batch_queue_ut/: CMakeLists.txt  batch_queue_ut.c  batch_queue_ut_reals.c
tests/bs_filename_helper_ut/: CMakeLists.txt  bs_filename_helper_ut.c
tests/bs_watchdog_int/: CMakeLists.txt  bs_watchdog_int.c
tests/bs_watchdog_threadpool_ut/: CMakeLists.txt  bs_watchdog_threadpool_ut.c
tests/bs_watchdog_ut/: CMakeLists.txt  bs_watchdog_ut.c
tests/buffer_ut/: CMakeLists.txt  buffer_ut.c  buffer_ut_pch.h
tests/cancellation_token_ut/: CMakeLists.txt  cancellation_token_ut.c  cancellation_token_ut_pch.h
tests/channel_int/: CMakeLists.txt  channel_int.c
tests/channel_internal_ut/: CMakeLists.txt  channel_internal_ut.c
tests/channel_ut/: CMakeLists.txt  channel_ut.c  channel_ut_pch.h
tests/constbuffer_array_batcher_nv_ut/: CMakeLists.txt  constbuffer_array_batcher_nv_ut.c  constbuffer_array_batcher_nv_ut_pch.h  main.c
tests/constbuffer_array_batcher_ut/: CMakeLists.txt  constbuffer_array_batcher_ut.c
tests/constbuffer_array_int/: CMakeLists.txt  constbuffer_array_int.c
tests/constbuffer_array_splitter_ut/: CMakeLists.txt  constbuffer_array_splitter_ut.c  constbuffer_array_splitter_ut_pch.h
tests/constbuffer_array_ut/: CMakeLists.txt  constbuffer_array_ut.c  constbuffer_array_ut_pch.h  my_mocks.h
tests/constbuffer_serialization_sample/: CMakeLists.txt  main.c
tests/constbuffer_thandle_int/: CMakeLists.txt  constbuffer_thandle_int.c
tests/constbuffer_thandle_ut/: CMakeLists.txt  constbuffer_thandle_ut.c  constbuffer_thandle_ut_pch.h
tests/constbuffer_ut/: CMakeLists.txt  constbuffer_ut.c  constbuffer_ut_pch.h  main.c
tests/critical_section_ut/: CMakeLists.txt  critical_section_ut.c  critical_section_ut_pch.h
tests/crtabstractions_ut/: CMakeLists.txt  crtabstractions_ut.c
tests/doublylinkedlist_ut/: CMakeLists.txt  doublylinkedlist_ut.c  doublylinkedlist_ut_pch.h
tests/external_command_helper_int/: CMakeLists.txt  external_command_helper_int.c  main.c
tests/external_command_helper_ut/: CMakeLists.txt  external_command_helper_ut.c  external_command_helper_ut_pch.h  main.c  mocked_external_command_helper.c
tests/external_command_sample/: CMakeLists.txt  main.c
tests/filename_helper_ut/: CMakeLists.txt  filename_helper_ut.c  filename_helper_ut_pch.h
tests/flags_to_string_int/: CMakeLists.txt  collection_one.c  collection_one.h  collection_two.c  collection_two.h  flags_to_string_int.c
tests/flags_to_string_ut/: CMakeLists.txt  flags_to_string_helper.c  flags_to_string_helper.h  flags_to_string_ut.c  flags_to_string_ut_pch.h
tests/for_each_in_folder_ut/: CMakeLists.txt  for_each_in_folder_mocked.c  for_each_in_folder_ut.c  for_each_in_folder_ut_pch.h
tests/for_each_in_sub_folder_ut/: CMakeLists.txt  for_each_in_sub_folder_mocked.c  for_each_in_sub_folder_ut.c  for_each_in_sub_folder_ut_pch.h
tests/gballoc_ut/: CMakeLists.txt  gballoc_undertest.c  gballoc_ut.c
tests/gballoc_without_init_ut/: CMakeLists.txt  gballoc_without_init_ut.c
tests/hash_ut/: CMakeLists.txt  hash_under_test.cpp  hash_ut.c  hash_ut_pch.h
tests/interlocked_hl_int/: CMakeLists.txt  interlocked_hl_int.c
tests/interlocked_hl_ut/: CMakeLists.txt  interlocked_hl_mocked.c  interlocked_hl_ut.c
tests/interlocked_hl_win32_ut/: CMakeLists.txt  interlocked_hl_win32_ut.c  main.c
tests/interlocked_int/: CMakeLists.txt  interlocked_int.c  main.c
tests/interlocked_linux_ut/: CMakeLists.txt  interlocked_linux_ut.c  main.c  mock_interlocked.c  mock_interlocked.h
tests/interlocked_win32_ut/: CMakeLists.txt  interlocked_win32_ut.c  main.c  mock_interlocked.c  mock_interlocked.h
tests/job_queue_int/: CMakeLists.txt  job_queue_int.c
tests/lock_ut/: CMakeLists.txt  (+1 more)
(+707 files in other folders)
