#Copyright (c) Microsoft. All rights reserved.
#Licensed under the MIT license. See LICENSE file in the project root for full license information.

add_subdirectory(reals)

if(${run_unittests})
    build_test_folder(reals_ut)
    build_test_folder(azure_base64_ut)
    build_test_folder(buffer_ut)
    build_test_folder(constbuffer_ut)
    build_test_folder(constbuffer_array_ut)
    build_test_folder(constbuffer_array_batcher_nv_ut)
    build_test_folder(doublylinkedlist_ut)
    build_test_folder(map_ut)
    build_test_folder(memory_data_ut)
    build_test_folder(rc_string_ut)
    build_test_folder(singlylinkedlist_ut)
    build_test_folder(strings_ut)
    build_test_folder(thandle_ut)
    build_test_folder(uuid_ut)
    if(WIN32)
        build_test_folder(sm_ut)
    endif()
endif()

if(${run_int_tests})
    if(WIN32)
        build_test_folder(sm_int)
    endif()
endif()
