#Copyright (c) Microsoft. All rights reserved.
#Licensed under the MIT license. See LICENSE file in the project root for full license information.

add_subdirectory(reals)

if(${run_unittests})

    build_test_folder(azure_base64_ut)
    build_test_folder(buffer_ut)
    build_test_folder(constbuffer_ut)
    build_test_folder(constbuffer_array_ut)
    build_test_folder(constbuffer_array_batcher_nv_ut)
    build_test_folder(doublylinkedlist_ut)
    build_test_folder(external_command_helper_ut)
    build_test_folder(interlocked_hl_ut)
    build_test_folder(log_critical_and_terminate_ut)
    build_test_folder(map_ut)
    build_test_folder(memory_data_ut)
    build_test_folder(ps_util_ut)
    build_test_folder(rc_string_array_ut)
    build_test_folder(rc_string_ut)
    build_test_folder(reals_ut)
    build_test_folder(singlylinkedlist_ut)
    build_test_folder(sm_ut)
    build_test_folder(strings_ut)
    build_test_folder(tarray_ut)
    add_subdirectory(tarray_int_reals)
    build_test_folder(tarray_int)
    build_test_folder(thandle_tuple_array_ut)
    build_test_folder(thandle_ut)
    build_test_folder(thandle_2_ut)
    build_test_folder(uuid_string_ut)
endif()

if(${run_int_tests})
    add_subdirectory(external_command_sample)
    add_subdirectory(constbuffer_serialization_sample)
    build_test_folder(external_command_helper_int)
    build_test_folder(sm_int)
endif()
