#Copyright (c) Microsoft. All rights reserved.
#Licensed under the MIT license. See LICENSE file in the project root for full license information.

add_subdirectory(reals)


if(${run_unittests})
    build_test_folder(async_op_ut)
    build_test_folder(async_retry_wrapper_ut)
    build_test_folder(async_type_helper_copy_value_handler_ut)
    build_test_folder(async_type_helper_ref_counted_handler_ut)
    build_test_folder(async_type_helper_thandle_handler_ut)
    build_test_folder(async_type_helper_ut)
    build_test_folder(azure_base64_ut)
    build_test_folder(buffer_ut)
    build_test_folder(cancellation_token_ut)
    build_test_folder(channel_ut)
    build_test_folder(channel_internal_ut)
    build_test_folder(constbuffer_ut)
    build_test_folder(constbuffer_array_ut)
    build_test_folder(constbuffer_array_batcher_nv_ut)
    build_test_folder(constbuffer_array_splitter_ut)
    build_test_folder(doublylinkedlist_ut)
    build_test_folder(external_command_helper_ut)
    build_test_folder(filename_helper_ut)
    build_test_folder(flags_to_string_ut)
    build_test_folder(hash_ut)
    build_test_folder(map_ut)
    build_test_folder(memory_data_ut)
    build_test_folder(object_lifetime_tracker_ut)
    build_test_folder(rc_ptr_ut)
    build_test_folder(rc_string_array_ut)
    build_test_folder(rc_string_utils_ut)
    build_test_folder(rc_string_ut)
    build_test_folder(reals_ut)
    build_test_folder(sliding_window_average_by_count_ut)
    build_test_folder(singlylinkedlist_ut)
    build_test_folder(strings_ut)
    build_test_folder(sync_wrapper_ut)
    build_test_folder(tarray_ut)
    add_subdirectory(tarray_int_reals)
    build_test_folder(tarray_int)
    build_test_folder(thandle_tuple_array_ut)
    build_test_folder(tqueue_ut)
    build_test_folder(two_d_array_ut)
    build_test_folder(uuid_string_ut)
    build_test_folder(watchdog_ut)
    build_test_folder(watchdog_threadpool_ut)
    build_test_folder(worker_thread_ut)
    if(WIN32)
        build_test_folder(for_each_in_folder_ut)
        build_test_folder(for_each_in_sub_folder_ut)
        # this test has a problem on Linux with the lack of srw_lock_ll reals
        # https://msazure.visualstudio.com/One/_backlogs/backlog/Azure%20Messaging%20Store/Backlog%20items/?workitem=25563889
        build_test_folder(tcall_dispatcher_ut)
        build_test_folder(thread_notifications_dispatcher_ut)
        build_test_folder(thread_notifications_dispatcher_wo_init_ut)
    endif()
endif()

if(${run_int_tests})
    build_test_folder(async_op_int)
    add_subdirectory(external_command_sample)
    add_subdirectory(constbuffer_serialization_sample)
    build_test_folder(flags_to_string_int)
    build_test_folder(external_command_helper_int)
    build_test_folder(tarray_2_int)
    build_test_folder(two_d_array_int)
    build_test_folder(channel_int)
    build_test_folder(worker_thread_int)
    build_test_folder(tqueue_int)
    build_test_folder(tcall_dispatcher_int)
    build_test_folder(watchdog_int)
    if(WIN32)
        build_test_folder(thread_notifications_dispatcher_int)
    endif()
endif()
